--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^5.0.0",
     "@angular/service-worker": "^5.0.0",
     "@ngrx/effects": "^4.1.1",
+    "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
+    "@ngrx/store-devtools": "^4.1.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
